# hyperplonk

arithmetic/: Cargo.toml
arithmetic/benches/: bench.rs
arithmetic/src/: virtual_polynomial.rs
hyperplonk/: Cargo.toml
hyperplonk/src/: utils.rs
subroutines/: Cargo.toml
subroutines/src/pcs/multilinear_kzg/: batching.rs  mod.rs  srs.rs
subroutines/src/pcs/univariate_kzg/: srs.rs
subroutines/src/poly_iop/prod_check/: mod.rs
transcript/: Cargo.toml
