[package]
name = "transcript"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ark-ff = { git = "https://github.com/a16z/arkworks-algebra", rev = "b5f7031" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", rev = "b5f7031" }
ark-std = { version = "^0.5.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
merlin = { version = "3.0.0", default-features = false }
